update games route to adhere to standard return data types
